# solvent

./: README.md  features.py  generate_data.py  invoices_featured.csv  main.py  model.json  pyproject.toml  solvent-dashboard.html  test_api.py  train.py
