[project]
name = "invoice-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faker>=40.15.0",
    "fastapi>=0.136.1",
    "polars>=1.40.1",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.46.0",
    "xgboost>=3.2.0",
]
